I reduced the padding of the "main container" to ensure better responsiveness on mobile devices

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -222,7 +222,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100dvh;
-    margin: 10rem 1.5rem 10rem 1.5rem;
+    margin: 3rem 1.5rem 3rem 1.5rem;
   }
   .card {
     width: 100%;
